Finishing positive and negative case for login

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -W ignore -v --html=laporan/report.html
+addopts = -W ignore -v --html=/Users/user/Desktop/pom-selenium-otomesyen/laporan/report.html
 testpaths =
     tests
